# arch-postinstall

./: .gitignore  ArchInstaller.spec  ArchSetup.spec  PKGBUILD  RatPresets-Win.spec  archrat.desktop  kde.sh  main.py  pyproject.toml  rat-center.desktop  windows_installer.py
arch-postinstall/: FETCH_HEAD  config  packed-refs
arch-postinstall/objects/pack/: pack-144a557aa10dbce13fe2b0a8200565c35384d30b.idx  pack-144a557aa10dbce13fe2b0a8200565c35384d30b.pack  pack-144a557aa10dbce13fe2b0a8200565c35384d30b.rev  pack-18093cf36f6f1059f588f4c0444a38f4b4c52628.idx  pack-18093cf36f6f1059f588f4c0444a38f4b4c52628.pack  pack-18093cf36f6f1059f588f4c0444a38f4b4c52628.rev  pack-28f92e7325ad2a350d06143d0ee53615af25c271.idx  pack-28f92e7325ad2a350d06143d0ee53615af25c271.rev  pack-509c34c218a4e2d1e90fd12ca6b35c7c2ef8085f.idx  pack-509c34c218a4e2d1e90fd12ca6b35c7c2ef8085f.pack  pack-509c34c218a4e2d1e90fd12ca6b35c7c2ef8085f.rev  pack-b06708bc222a3a85c7fe5578c34284a8de137409.idx  pack-b06708bc222a3a85c7fe5578c34284a8de137409.pack  pack-b06708bc222a3a85c7fe5578c34284a8de137409.rev  pack-d09cd019dacacb397fe6b8ab54738bdd4bc24367.idx  pack-d09cd019dacacb397fe6b8ab54738bdd4bc24367.pack  pack-d09cd019dacacb397fe6b8ab54738bdd4bc24367.rev  pack-d5fbc175547ec553aa374f05920c42005ff0b293.idx  pack-d5fbc175547ec553aa374f05920c42005ff0b293.pack  (+1 more)
pkg/arch-postinstall/: .BUILDINFO  .MTREE  .PKGINFO
src/: RatInstall.desktop  presets.desktop  ratinstall-presets.desktop
src/postinstall/: gnome.py  plasma.py  sddm_config.py  system.py
src/ui/: main_window.py  rat_center.py  styles.py  theme_switcher.py
(+9 files in other folders)
